nobase_include_HEADERS = lader/alignment.h lader/combined-alignment.h \
lader/config-base.h lader/config-evaluator.h lader/config-runner.h \
lader/config-trainer.h lader/dictionary.h lader/feature-align.h \
lader/feature-base.h lader/feature-data-align.h lader/feature-data-base.h \
lader/feature-data-parse.h lader/feature-data-sequence.h lader/feature-parse.h \
lader/feature-sequence.h lader/feature-set.h lader/feature-vector.h \
lader/hyper-edge.h lader/hyper-graph.h lader/hypothesis.h lader/hypothesis-queue.h \
lader/loss-base.h lader/loss-bracket.h lader/loss-chunk.h lader/loss-tau.h lader/ranks.h \
lader/reorderer-evaluator.h lader/reorderer-model.h lader/reorderer-runner.h \
lader/reorderer-trainer.h lader/symbol-set.h lader/target-span.h \
lader/util.h lader/config.h lader/thread-pool.h lader/output-collector.h \
lader/span-stack.h
